<resources>
    <string name="app_name">FYP</string>
    <!--variable-->
    <string name="firstVariable">X</string>
    <string name="secondVariable">Y</string>
    <!--symbol-->
    <string name="summationSymbol">+</string>
    <string name="subtractionSymbol">-</string>
    <!--text-->
    <string name="correctAnswer">Correct</string>
    <string name="wrongAnswer">Incorrect</string>
    <string name="timeLeft">Time Left</string>
    <string name="score">Score</string>
    <string name="testFinished">Challenge Finished,\n You Scored</string>
    <!--button-->
    <string name="startButton">Start</string>
    <string name="confirmButton">Confirm</string>
    <string name="nextButton">Next</string>
    <!--spinner-->
    <string-array name="spinnerFill">
        <item>Study</item>
        <item>Challenge</item>
    </string-array>
    <!--scheduler-->
    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you of your studies</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
    <!--count-->
    <string name="count_Question">How many Apples are there?</string>
    <string-array name="countNumber">
        <item>Zero</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
        <item>Twelve</item>
        <item>Thirteen</item>
        <item>Fourteen</item>
        <item>Fifteen</item>
        <item>Sixteen</item>
        <item>Seventeen</item>
        <item>Eighteen</item>
        <item>Nineteen</item>
        <item>Twenty</item>
    </string-array>
    <!--geometry-->
    <string-array name="geometryName">
        <item>Circle</item>
        <item>Square</item>
        <item>Triangle</item>
    </string-array>
    <integer-array name="geometryPic">
        <item>@drawable/circle</item>
        <item>@drawable/square</item>
        <item>@drawable/triangle</item>
    </integer-array>
    <string-array name="geometryDefinition">
        <item>This is a <b>Circle</b>\nIt has <b>Zero</b> pointy side</item>
        <item>This is a <b>Square</b>\nIt has <b>Four</b> pointy side</item>
        <item>This is a <b>Triangle</b>\nIt has <b>Three</b> pointy side</item>
    </string-array>
</resources>
