<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llReminder"
    tools:context=".Activities.SchedulerActivity">


    <TextView
        android:id="@+id/schedulerActivity_tvReminderHeader"
        style="@style/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sett_reminder_header"
        app:layout_constraintStart_toStartOf="@+id/schedulerActivity_glLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/schedulerActivity_glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/schedulerActivity_glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:id="@+id/schedulerActivity_llToggleAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/schedulerActivity_glRight"
        app:layout_constraintStart_toStartOf="@+id/schedulerActivity_glLeft"
        app:layout_constraintTop_toBottomOf="@+id/schedulerActivity_tvReminderHeader">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/schedulerActivity_llReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/schedulerActivity_tvReminderLabel"
                style="@style/settings_sub_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sett_reminder_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.476" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/schedulerActivity_timerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:gravity="center_vertical"
                android:theme="@style/switch_theme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/schedulerActivity_tvLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/sett_reminder_desc"
            app:layout_constraintEnd_toStartOf="@+id/schedulerActivity_glRight"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/schedulerActivity_glLeft"
            tools:layout_editor_absoluteY="124dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/schedulerActivity_llSetStime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/schedulerActivity_glHorisontal"
        app:layout_constraintEnd_toStartOf="@+id/schedulerActivity_glRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/schedulerActivity_glLeft"
        app:layout_constraintTop_toBottomOf="@+id/schedulerActivity_llToggleAlarm">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/schedulerActivity_tvReminderTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sett_reminder_time_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/schedulerActivity_ivTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/schedulerActivity_tvReminderTimeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sett_reminder_time_content" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/schedulerActivity_glHorisontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42270058" />

</android.support.constraint.ConstraintLayout>